fix overflow : add 'overflow: hidden' to wrapper.

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,9 @@
     width: 100%;
     height: 200px;
 }
+.wrapper {
+    overflow: hidden;
+}
 
 body {
     font-family: 'ヒラギノ角ゴ Pro', Meiryo, メイリオ, Osaka, 'MS PGothic', arial, helvetica, sans-serif;
